k8s/base/backend/networkpolicies/allow-databases.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-databases
  namespace: backend-ns
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - db-users
      - db-catalog
      - db-showtime
      - db-booking
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: user-service
    ports:
    - protocol: TCP
      port: 5432
  - from:
    - podSelector:
        matchLabels:
          app: catalog-service
    ports:
    - protocol: TCP
      port: 5432
  - from:
    - podSelector:
        matchLabels:
          app: showtime-service
    ports:
    - protocol: TCP
      port: 5432
  - from:
    - podSelector:
        matchLabels:
          app: booking-service
    ports:
    - protocol: TCP
      port: 5432
